# turnip_music2

./: Cargo.toml
src/: data_model.rs  lib.rs  scanner.rs
src/data_model/: native_metadata.rs
