[package]
name = "turnip_music2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chromaprint = "0.2.0"
#discid = "0.7.0"
musicbrainz_rs = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
toml_edit = { version = "0.24.0+spec-1.1.0", features = ["serde"] }
